[package]
name = "vaporcache"
version = "0.4.0"
edition = "2021"

[dependencies]
lambda-extension = "0.11.0"
serde = "1"
tokio = { version = "1", features = ["macros"] }
redis = { version = "0.28.2", features = ["tokio-comp", "connection-manager"] }
combine = { version = "4.6", default-features = false, features = ["std"] }
moka = { version = "0.12.10", features = ["future"] }
